divide the images to small groups

--- a/description
+++ b/description
@@ -1,7 +1,7 @@
-Soldier, Military organization, Infantry, .
-Battle, Rebellion, Strategy video game, Conquistador, Cossacks, Troop, Painting, Infantry, Art, .
-Soldier, Army, Infantry, Military, Military organization, Military camouflage, Marines, Troop, Uniform, Military uniform, .
-Soldier, Army, Military, Infantry, Military organization, Military uniform, Marines, Personal protective equipment, Troop, Combat medic, .
-Soldier, Army, Military, Military camouflage, Infantry, Military organization, Troop, Military uniform, Military person, Marines, .
-Soldier, Battle, Infantry, Military organization, History, Cossacks, Troop, Rebellion, .
-Vehicle, Soldier, Troop, Military organization, Crew, Infantry, .
+soldier, military organization, infantry, .
+battle, rebellion, strategy video game, conquistador, cossacks, troop, painting, infantry, art, .
+soldier, army, infantry, military, military organization, military camouflage, marines, troop, uniform, military uniform, .
+soldier, army, military, infantry, military organization, military uniform, marines, personal protective equipment, troop, combat medic, .
+soldier, army, military, military camouflage, infantry, military organization, troop, military uniform, military person, marines, .
+soldier, battle, infantry, military organization, history, cossacks, troop, rebellion, .
+vehicle, soldier, troop, military organization, crew, infantry, .
